# cega

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  Trunk.toml  test.cga
.github/workflows/: commit.yml
src/: cega.rs  cga.rs  color.rs  exp.rs  file_data.rs  image.rs  lib.rs  main.rs  palette.rs  parser.rs  png.rs  rascii.rs  sdl.rs  terminal.rs  tiles.rs
src/terminal/: args.rs  main.rs  mod.rs
src/wasm/: file_input.rs  image.rs  index.html  main.rs  mod.rs  styles.css
src/webc/: index.html  main.rs  styles.css
