[package]
name = "cega"
description = "CGA and EGA binary image file processing library"
version = "0.2.2"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/knzconnor/cega"
readme = "README.md"
keywords = ["gamedev", "graphics"]
categories = ["command-line-utilities"]
exclude = [".rusty-hook.toml", ".gitignore"]
default-run = 'cega'

[[bin]]
name = 'cega'
path = "src/terminal/main.rs"
required-features = ["terminal"]

[[bin]]
name = 'cega-wasm'
path = "src/wasm/main.rs"
required-features = ["wasm"]

[features]
default = ["terminal", "png"]
terminal = ["dep:clap"]
png = ["dep:image"]
wasm = ["png", "dep:base64", "dep:gloo", "dep:js-sys", "dep:web-sys", "dep:yew"]
#sdl2 = ["dep:sdl2"]

[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies]
bitvec = "1"
factor = "0.4.0"

#optional deps
image = { optional = true, version = "0.25.1" }

#terminal
clap = { optional = true, version = "4.5.7", features = ["derive"]                        }
sdl2 = { optional = true, version = "0.37.0", features = ["gfx"], default-features = false }

#wasm
base64  = { optional = true, version = "0.21.5"}
gloo    = { optional = true, version = "0.10" }
js-sys  = { optional = true, version = "0.3"}
web-sys = { optional = true, version = "0.3", features = ["File", "DragEvent", "DataTransfer"] }
yew     = { optional = true, git = "https://github.com/yewstack/yew/", features = ["csr"] }