[package]
name = "cega"
description = "CGA and EGA binary image file processing library"
version = "0.2.2"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/knzconnor/cega"
readme = "README.md"
keywords = ["gamedev", "graphics"]
categories = ["command-line-utilities"]
exclude = [".rusty-hook.toml", ".gitignore"]
default-run = 'cega'

[[bin]]
name = 'cega'
path = "src/terminal/main.rs"
required-features = ["terminal"]

[[bin]]
name = 'cega-wasm'
path = "src/wasm/main.rs"
required-features = ["wasm"]

[features]
default = ["terminal", "png"]
png = ["dep:image"]
#terminal related features
terminal = ["dep:clap"]
#Preview window popup for the terminal
gui = ["dep:sdl2"]
#Web usage, may want to build with no-default-features to skip irrelevant terminal stuff
wasm = ["png", "dep:base64", "dep:gloo", "gloo-console", "dep:js-sys", "dep:web-sys", "dep:yew"]


[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies]
bitvec = "1"
factor = "0.4.0"

#optional deps
image = { optional = true, version = "0.25.1" }

#terminal
clap = { optional = true, version = "4.5.7", features = ["derive"]                        }
sdl2 = { optional = true, version = "0.37.0", features = ["gfx"], default-features = false }

#wasm
base64       = { optional = true, version = "0.21.5"}
gloo-console = { optional = true, version = "0.3.0"}
gloo         = { optional = true, version = "0.10", features = ["futures"] }
js-sys       = { optional = true, version = "0.3"}
web-sys      = { optional = true, version = "0.3.69", features = ["FormData","HtmlFormElement", "File", "DragEvent", "DataTransfer"] }
yew          = { optional = true, git = "https://github.com/yewstack/yew/", features = ["csr"] }